# N_Body_Comparison2

./: CMakeLists.txt  NBodySim  NBodySim_test  README.md  barnes_hut_force_calculation.cpp  cell.cpp  direct_force_method.cpp  direct_force_method.h  domain_bounds_functions.cpp  domain_bounds_functions.h  fmm_cpukernel.cpp  force_calculation_methods.cpp  force_calculation_methods.h  integration_schemes.cpp  lattice_point.h  main.cpp  multipole_method_constants.cpp  multipole_method_force_calculation.cpp  simulation_parameters.cpp  simulation_parameters.h  structures.h  test_cases.cpp
EFIELD_DATABASE/1.9/: 323nA_1ps_information.txt
